# Vimktor

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  comp  cursor.cpp  debug.gdb  debug.sh  filemanager.cpp  filemanager.h  input_manager.cpp  main.cpp  renderer.cpp  renderer.h  sequence.cpp  sequence.h  test  test.cs  textbox.txt  textbuffer.h  utils.h  vimktor  vimktor.cpp  vimktor.h  vimktor_debug.cpp  window.cpp  window.h  window.txt
include/: common.h  cursor.h  input_manager.h  sequence.h  vimktor.h  vimktor_debug.h
